--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,6 +4,13 @@
 /node_modules
 /.pnp
 .pnp.js
+/frontend/node_modules
+/frontend/package-lock.json
+/package-lock.json
+/yarn.lock
+/frontend/yarn.lock
+.node_modules
+.package-lock.json
 
 # testing
 /coverage
